fix flicker

--- a/cant-treat/160x600/style.css
+++ b/cant-treat/160x600/style.css
@@ -3,6 +3,7 @@ body {
     margin: 0;
 }
 #vw-ad {
+    display: none;
     width: 160px;
     height: 600px;
 }
