--- a/cant-treat/300x250/style.css
+++ b/cant-treat/300x250/style.css
@@ -3,6 +3,7 @@ body {
     margin: 0;
 }
 #vw-ad {
+    display: none;
     width: 300px;
     height: 250px;
 }
