--- a/cant-treat/320x50/style.css
+++ b/cant-treat/320x50/style.css
@@ -3,6 +3,7 @@ body {
     margin: 0;
 }
 #vw-ad {
+    display: none;
     width: 320px;
     height: 50px;
 }
