--- a/cant-treat/728x90/style.css
+++ b/cant-treat/728x90/style.css
@@ -3,6 +3,7 @@ body {
     margin: 0;
 }
 #vw-ad {
+    display: none;
     width: 728px;
     height: 90px;
 }
